tests/snapshots/snapshot_tests__render_footer_navigation.snap
---
source: tests/snapshot_tests.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│j/k Navigate | ^f/^b PgDn/Up | : Command | Enter Details | / Filter/Search | N/A/T/S Sort | s Suspend | r Resume      │"
"│| R Reconcile | y YAML | d Describe | e Edit | f Favorite | g Graph | h History | v Values | t Trace | W              │"
"│Reconcile+Source | ^d Delete | ? Help | Esc/q Back                                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
