tests/snapshots/snapshot_tests__render_header.snap
---
source: tests/snapshot_tests.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────┐    _____ _             ___         "
"│Context: test-context  Namespace: all  ✗ 66.7%                                    │   |  ___| |_   ___  __/ _ \ ___    "
"│Total Resources: 3                                                                │   | |_  | | | | \ \/ / (_) / __|   "
"│Resources: GitRepository:1 HelmRelease:1 Kustomization:1                          │   |  _| | | |_| |>  < \__, \__ \   "
"│                                                                                  │   |_|   |_|\__,_/_/\_\  /_/|___/   "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"└──────────────────────────────────────────────────────────────────────────────────┘                                    "
