tests/snapshots/snapshot_tests__render_header_with_filter.snap
---
source: tests/snapshot_tests.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────┐    _____ _             ___         "
"│Context: test-context  Namespace: all  ● 100.0%                                   │   |  ___| |_   ___  __/ _ \ ___    "
"│⚠ Filter: name='kustomization' + type=Kustomization + health=healthy  |  Showing 1│   | |_  | | | | \ \/ / (_) / __|   "
"│Total Resources: 3 (filtered: 1)                                                  │   |  _| | | |_| |>  < \__, \__ \   "
"│Resources: Kustomization:1                                                        │   |_|   |_|\__,_/_/\_\  /_/|___/   "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"│                                                                                  │                                    "
"└──────────────────────────────────────────────────────────────────────────────────┘                                    "
