tests/snapshots/snapshot_tests__render_resource_describe_with_data.snap
---
source: tests/snapshot_tests.rs
expression: terminal.backend()
---
"┌Describe - Kustomization - my-kustomization───────────────────────────────────────────────────────────────────────────┐"
"│Summary                                                                                                               │"
"│Name: my-kustomization                                                                                                │"
"│Namespace: flux-system                                                                                                │"
"│Kind: Kustomization                                                                                                   │"
"│Ready: True                                                                                                           │"
"│Suspended: False                                                                                                      │"
"│Revision: main@sha1:abc123                                                                                            │"
"│                                                                                                                      │"
"│Message                                                                                                               │"
"│Applied revision: main@sha1:abc123                                                                                    │"
"│API Version: kustomize.toolkit.fluxcd.io/v1                                                                           │"
"│Created: 2026-04-01T12:00:00Z                                                                                         │"
"│Generation: 3                                                                                                         │"
"│Resource Version: 12345                                                                                               │"
"│                                                                                                                      │"
"│Labels                                                                                                                │"
"│  app.kubernetes.io/name: demo                                                                                        │"
"│                                                                                                                      │"
"│Annotations                                                                                                           │"
"│  reconcile.fluxcd.io/requestedAt: 2026-04-01T12:05:00Z                                                               │"
"│                                                                                                                      │"
"│Spec                                                                                                                  │"
"│  interval: 10m                                                                                                       │"
"│  path: ./clusters/prod                                                                                               │"
"│  prune: True                                                                                                         │"
"│  sourceRef:                                                                                                          │"
"│    kind: GitRepository                                                                                               │"
"│    name: my-gitrepo                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
