tests/snapshots/snapshot_tests__render_resource_detail.snap
---
source: tests/snapshot_tests.rs
expression: terminal.backend()
---
"┌Detail - my-kustomization─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Name: my-kustomization                                                                                                │"
"│Namespace: flux-system                                                                                                │"
"│Type: Kustomization                                                                                                   │"
"│                                                                                                                      │"
"│Suspended: False                                                                                                      │"
"│Ready: True                                                                                                           │"
"│Revision: main@sha1:abc123                                                                                            │"
"│                                                                                                                      │"
"│Message:                                                                                                              │"
"│Applied revision: main@sha1:abc123                                                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
